# gbpCode

./: .Makefile-py  .clang-format  .gitignore  .gitmodules  .project.yml  .readthedocs.yml  CMakeLists.txt  FindFFTW.cmake  INSTALL  README.md  extern.cmake  local.cmake  local.cmake.template  project.cmake
.cmake/: 3rd_party.cmake  FindFFTW.cmake  build.cmake  compilers.cmake
cmake/: 3rd_party.cmake  FindCFITSIO.cmake  FindFFTW.cmake  custom_targets.cmake  macros.cmake
docs/: conf.py  conf.py.in  index.rst
docs/src/: C_API.rst  Python_API.rst
gbpAstro/: local.cmake
gbpAstro/docs/: README.trees
gbpAstro/gbpClustering/: .make_atable_pspec.c.swp  compute_cfunc.c  compute_pspec.c  free_cfunc.c  free_pspec.c  generate_randoms.c  init_cfunc.c  init_pspec.c  make_atable_cfunc.c  make_atable_mass_function.c  make_atable_pspec.c  make_diff_grid.c  make_gadget_grid.c  make_gadget_pspec.c  make_groupings.c  make_groupings_cfunc.c  make_groupings_pspec.c  map_to_grid.c  read_atable.c  read_cfunc.c  read_groupings.c  write_cfunc.c  write_grid.c  write_pspec.c
gbpAstro/gbpCosmo/: D_angular_1to2.c  local.cmake  make_mass_function.c  make_snap_list.c  plot_Pk.c  plot_clustering.c  plot_cosmo.c  plot_mergers.c  scale_gbpCosmo2gbpCosmo.c
gbpAstro/gbpHalos/: cat_group_analysis.c  catalog_splitmerge.c  check_if_substructure_hierarchy_defined.c  compute_group_analysis.c  convert_AHF.c  convert_PHK2ascii.c  fclose_catalog.c  fopen_catalog.c  fread_catalog.c  gbpHalos.h  haloIDs2stdout.c  init_halo_trend.c  init_halo_trend_coordinate.c  init_halo_trend_functions.c  local.cmake  make_catalog_SSFctn.c  make_catalog_ascii.c  make_catalog_group_ascii.c  make_catalog_mass_function.c  make_catalog_subvolume_stats.c  make_catalog_summary.c  make_group_PHKs.c  make_group_analysis.c  make_halo_particle_list.c  match_halos.c  maximum_match_score.c  query_catalog.c  query_catalog_counts.c  query_catalog_indices.c  query_group.c  read_groups.c  read_groups_AHF.c  remove_duplicates.c  reorder_halo_ids.c  update_halo_files_format.c  update_properties.c
gbpAstro/gbpRender/: RGB_lookup.c  add_mark_argument.c  add_render_scene.c  check_camera_sealed.c  check_if_particle_marked.c  close_movie.c  compute_f_stretch.c  compute_perspective_transformation.c  create_colour_table.c  create_mark_argument.c  fetch_image_array.c  fetch_render_colour_index.c  free_camera_depths.c  free_image.c  free_particle_map_quantities.c  free_perspective.c  free_render.c  free_scenes.c  gbpRender.h  init_camera.c  init_image.c  init_make_map_abs.c  init_make_map_noabs.c  init_particle_map_quantities.c  init_perspective.c  init_render.c  init_scene.c  make_colour_bar.c  open_movie.c  parse_render_file.c  parse_set_scene_quantity.c  perform_marking.c  pick_best_snapshot.c  process_SSimPL_halos.c  read_frame.c  read_gadget_binary_render.c  read_image.c  render.c  render_frame.c  rotate_particle.c  (+19 more)
gbpAstro/gbpSPH/: allocate_gadget_particles.c  change_gadget_filename.c  display_gadget_header.c  display_gadget_info.c  free_plist.c  free_types.c  gadget2ascii.c  gadget2bin.c  gadget2csv.c  gadget_excise.c  gadget_header.c  gadget_info.c  gadget_mark.c  gadget_replicate.c  gadget_split.c  gadget_splitmerge.c  gadget_subsample.c  gbpSPH.h  init_gadget_read.c  init_smooth_read.c  local.cmake  make_expanded_snaplist.c  make_snaplist.c  mark_gadget.c  mark_gadget.cc  mark_particles.c  prep_types.c  process_gadget_file.c  process_gadget_file_functions.c  read_gadget_binary.c  read_gadget_binary_header.c  read_mark_file.c  read_smooth.c  set_gadget_filename.c  set_smooth_filename.c  smooth2ascii.c  write_gadget_ascii.c  write_gadget_bin.c  write_gadget_binary.c  write_gadget_binary_new.c  (+2 more)
gbpAstro/gbpSwapEndian/: .swap_endian_SSimPL.cc.swp  check_integrity_SSimPL.c  check_integrity_catalogs.c  check_integrity_grids.c  check_integrity_halos.c  gbpSwapEndian.h  local.cmake  swap_endian_SSimPL.c  swap_endian_SSimPL.cc  swap_endian_catalogs.c  swap_endian_grids.c  swap_endian_halos.c  swap_endian_smooth.c  swap_endian_snapshot.c
gbpAstro/gbpTrees/: check_match_files.c  convert_Bolshoi.c  crossmatches2ascii.c  extract_tree_horizontal.c  local.cmake  make_atable_match_score.c  make_catalog_markers_ascii.c  make_cross_catalog_matches.c  make_forests.c  make_match_catalog.c  make_match_score_table.c  make_matched_catalog.c  make_single_matches.c  make_trees.c  make_trees_analysis.c  make_trees_analysis_relaxation.c  make_trees_horizontal.c  make_trees_markers.c  make_trees_matches.c  make_trees_stats.c  make_trees_vertical.c  matchfile2ascii.c  most_massive_subgroup_analysis.c  parse_tree_case.c  query_2way_matches.c  query_forest_trees_IDs.c  query_matches.c  query_progenitors.c  query_trees.c  query_trees_SAGE.c  query_trees_volume.c  tree_groups.c  tree_stats_horizontal.c  validate_ghost_trees.c  view_tree.c  view_tree_mil.c
gbpLib/: gbpConstants.h  gbpLib.h  local.cmake
gbpLib/gbpADaPS/: ADaPS_deallocate.c  ADaPS_exist.c  ADaPS_fetch.c  ADaPS_free.c  ADaPS_status.c  ADaPS_store.c  gbpADaPS.h  local.cmake
gbpLib/gbpCalc/: calc_max.c  calc_max_global.c  calc_mean.c  calc_mean_global.c  calc_mean_marked.c  calc_median.c  calc_median_global.c  calc_min.c  calc_min_global.c  calc_stddev.c  calc_stddev_global.c  calc_sum.c  calc_sum_global.c  gbpCalc.h  local.cmake
gbpLib/gbpCommon/: local.cmake
gbpLib/gbpFITS/: append_image_FITS.c  local.cmake  read_image_FITS.c  transpose_array.c  write_image_FITS.c
gbpLib/gbpHDF5/: local.cmake  read_HDF5_1D.c  read_HDF5_3D.c
gbpLib/gbpMultifile/: fclose_multifile.c  fopen_multifile.c  fopen_multifile_nth_file.c  fread_multifile.c  gbpMultifile.h  local.cmake
gbpLib/gbpParse/: gbpParse.h  local.cmake
gbpLib/gbpSort/: heap_sort.c  local.cmake  merge_sort.c  sort.c
gbpMath/: gbpMath.h  local.cmake
gbpMath/gbpDomain/: clear_field.c  exchange_ring_buffer.c  exchange_slab_buffer_left.c  exchange_slab_buffer_right.c  (+5 more)
gbpPkgs/: local.cmake
gbpUtils/: hist.c  run_mpi  run_mpi_valgrind  run_queue
old/: CMakeLists.txt  project.cmake
src/: hello_world.c  local.cmake
test/: Makefile
(+1103 files in other folders)
